if (NOT DEFINED Boost_USE_STATIC_LIBS)
	set(Boost_USE_STATIC_LIBS    ON)
endif()
set(Boost_USE_MULTITHREADED  ON)
set(Boost_USE_STATIC_RUNTIME OFF)
add_definitions(-DBOOST_NO_AUTO_PTR)
find_package(Boost REQUIRED COMPONENTS thread system filesystem locale)

add_subdirectory("com")
add_subdirectory("commands")
add_subdirectory("events")
add_subdirectory("traits")
add_subdirectory("util")
add_subdirectory("server")
add_subdirectory("editor")

file(GLOB SRC_GLOB "*.h" "*.cpp" "*.c")
list(APPEND SRC ${SRC_GLOB})


include("CMakeCompilerSettings.cmake")
message("${CMAKE_CXX_FLAGS}")
add_executable(mud ${SRC})
target_link_libraries(mud jsoncpp_lib_static)
target_link_libraries(mud ${Boost_FILESYSTEM_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_LOCALE_LIBRARY})
target_link_libraries(mud server commands events traits util editor com)
IF (WIN32)
    target_link_libraries(mud Ws2_32 Mswsock)
ELSE()
    target_link_libraries(mud icuuc icui18n pthread rt)
ENDIF()

